# texide

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/texide_ast/: Cargo.toml
crates/texide_cache/: Cargo.toml
crates/texide_cli/: Cargo.toml
crates/texide_cli/src/: main.rs
crates/texide_cli/tests/: cli_behavior.rs
crates/texide_core/: Cargo.toml
crates/texide_core/src/: config.rs  error.rs  fixer.rs  lib.rs  linter.rs  result.rs
crates/texide_lsp/src/: lib.rs  main.rs
crates/texide_parser/: Cargo.toml
crates/texide_parser/src/: lib.rs  markdown.rs  text.rs  traits.rs
crates/texide_plugin/: Cargo.toml
crates/texide_plugin/src/: executor_wasmi.rs
crates/texide_registry/: Cargo.toml
crates/texide_registry/src/: manifest.rs
docs/: TDD.md  arena-allocation.md  plugin-distribution.md  roadmap.md  rule-development.md  wasm-interface.md
rules/: Cargo.toml  README.md
rules/common/: Cargo.toml
rules/common/src/: lib.rs
rules/no-doubled-joshi/: Cargo.toml
rules/no-doubled-joshi/src/: lib.rs
rules/no-todo/: Cargo.toml
rules/no-todo/src/: lib.rs
rules/rules-pdk/src/: lib.rs
rules/sentence-length/: Cargo.toml
rules/sentence-length/src/: lib.rs
schemas/: README.md  rule-types.json
schemas/v1/: config.json  plugin.json
templates/assemblyscript/: README.md  asconfig.json  package.json
templates/assemblyscript/assembly/: index.ts
templates/rust/: Cargo.toml  README.md
templates/rust/src/: lib.rs
