[package]
name = "texide"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "High-performance natural language linter written in Rust"

[[bin]]
name = "texide"
path = "src/main.rs"

[dependencies]
texide_core = { workspace = true, features = ["native"] }
clap = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
