[package]
name = "texide_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Parser implementations for Texide"

[dependencies]
texide_ast = { workspace = true }
markdown = { workspace = true }
thiserror = { workspace = true }
